--- a/vertigo-bot-designer/src/main/java/io/vertigo/chatbot/designer/analytics/multilingual/AnalyticsMultilingualResources_fr_FR.properties
+++ b/vertigo-bot-designer/src/main/java/io/vertigo/chatbot/designer/analytics/multilingual/AnalyticsMultilingualResources_fr_FR.properties
@@ -1,4 +1,6 @@
 DELETED_BOT = Bot supprimé
 SESSIONS_FILENAME = export_sessions_
 UNKNOWN_MESSAGES_FILENAME = export_messages_inconnus_
+REQUEST_FILENAME = export_messages_reconnus_non_reconnus_
+USER_ACTIONS_FILENAME = export_actions_utilisateur_
 MANDATORY_TYPE_EXPORT_ANALYTICS = Merci de choisr un type d''export de statistiques
