--- a/vertigo-bot-designer/src/main/java/io/vertigo/chatbot/designer/domain/analytics/DtResources_en_US.properties
+++ b/vertigo-bot-designer/src/main/java/io/vertigo/chatbot/designer/domain/analytics/DtResources_en_US.properties
@@ -3,6 +3,17 @@
 # Resources du module io.vertigo.chatbot.designer.domain.analytics;
 ################################################################################");
 
+fldRequestExport$date = Date
+fldRequestExport$recognized = Number of recognized
+fldRequestExport$unrecognized = Number of unrecognized
+
+################################################################################");
+
+fldUserActionsExport$date = Date
+fldUserActionsExport$count = Count
+
+################################################################################");
+
 fldSentenseDetail$messageId = Rasa message ID
 fldSentenseDetail$date = Date
 fldSentenseDetail$text = User text
