--- a/vertigo-bot-designer/src/main/java/io/vertigo/chatbot/designer/domain/analytics/DtResources_fr_FR.properties
+++ b/vertigo-bot-designer/src/main/java/io/vertigo/chatbot/designer/domain/analytics/DtResources_fr_FR.properties
@@ -3,6 +3,17 @@
 # Resources du module io.vertigo.chatbot.designer.domain.analytics;
 ################################################################################");
 
+fldRequestExport$date = Date
+fldRequestExport$recognized = Nombre de phrases reconnues
+fldRequestExport$unrecognized = Nombre de phrases non reconnues
+
+################################################################################");
+
+fldUserActionsExport$date = Date
+fldUserActionsExport$count = Nombre
+
+################################################################################");
+
 fldSentenseDetail$messageId = Identifiant rasa
 fldSentenseDetail$date = Date
 fldSentenseDetail$text = Texte utilisateur
