--- a/vertigo-bot-designer/src/main/webapp/WEB-INF/views/builder/bot/topicsList_fr.properties
+++ b/vertigo-bot-designer/src/main/webapp/WEB-INF/views/builder/bot/topicsList_fr.properties
@@ -1,5 +1,6 @@
 topic.title.page = Liste de topics
 topic.title.popup = Nouveau topic
+topic.default.title = Intentions par défaut
 
 topic.isEnabled = Active
 topic.title = Titre
